<resources>
    <string name="app_name">Movie App</string>
    <string name="movie">Movie</string>
    <string name="favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="empty_text">Empty data</string>
    <string name="release_date">Release Date : %s</string>
    <string name="failed_fetch_movie">Failed to fetch movie</string>
    <string name="failed_fetch_similar_movie">Failed to fetch similar movie</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="saved_favorite_movie">Saved to favorite movie</string>
    <string name="removed_favorite_movie">Removed from favorite movie</string>
</resources>